Fixed scrollbar issue. Still need to fix clear button issue.

--- a/css/visualization_styles.css
+++ b/css/visualization_styles.css
@@ -272,9 +272,9 @@ div.tooltip {
 }
 
 #launchInfoBox{
-    width: 260px;
+  width: 260px;
 	height: auto;
-    border:solid 1px;
+  border:solid 1px;
 	opacity: 0.8;
 	fill: white;
 	overflow: auto;
@@ -287,8 +287,9 @@ div.tooltip {
 }
 
 #title_bar{
-    height: 20px;
-    width: auto;
+  height: 20px;
+  width: auto;
+  opacity: 0.8;
 	font-size: 11px;
 	font-family:  'Titillium Web', sans-serif;
 	cursor: pointer;
@@ -301,15 +302,6 @@ div.tooltip {
 	float: top;
 }
 
-/* #text_box{
-	width: 100%;
-    background: rgba(36, 36, 36, 0.75);
-	fill: white;
-	font-size: 8px;
-	font-family:  'Titillium Web', sans-serif;	
-	cursor: move;
-} */
-
 #launchInfoBoxAndSlider::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -320,7 +312,7 @@ div.tooltip {
 #launchInfoBoxAndSlider::-webkit-scrollbar
 {
 	width: 12px;
-	background-color: #959595;
+	background-color: #959595;
 }
 
 #launchInfoBoxAndSlider::-webkit-scrollbar-thumb
